# teknofest_hava_savunma

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: ayarlar.yaml
docs/: MANIFESTO.md  TEKNIK_MIMARI.md
src/: interceptor.py  main.py  radar.py  telemetry.py  utils.py
tests/: test_simulasyon.py
